@@ -1,3 +1,8 @@
+2007-08-23 09:41  rsbivand
+
+	* ChangeLog, DESCRIPTION, INDEX, R/gwr.R, R/gwr.whole.test.R,
+	  inst/ChangeLog, man/gwr.Rd: gwr weights
+
 2007-08-08 20:41  rsbivand
 
 	* DESCRIPTION, R/gwr.whole.test.R: df1 in BFC99
